objects/Condition__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Detail__c</fullName>
        <label>Condition Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Position Construction Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>1st Position Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>1st Position DOT - Property to be taken as an Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>1st position UCC Filing on A/R, Inventory &amp; All business assets</fullName>
                </value>
                <value>
                    <fullName>1st position UCC Filing on Fixtures</fullName>
                </value>
                <value>
                    <fullName>2nd Position Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>2nd Position DOT- Property to be taken as an Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>3rd Position Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>3rd Position DOT- Property to be taken as an Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>4th Position Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>4th Position DOT- Property to be taken as an Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>UCC filing to detail out any asset with a value &gt; $5,000 to include item, make, model, serial number and value.</fullName>
                </value>
                <value>
                    <fullName>All tax returns to be reconciled to IRS Transcripts</fullName>
                </value>
                <value>
                    <fullName>Assignment of existing appraisal</fullName>
                </value>
                <value>
                    <fullName>Assignment of Rents / Leases</fullName>
                </value>
                <value>
                    <fullName>Borrower cash injection to be tracked and verified with cleared checks and invoices</fullName>
                </value>
                <value>
                    <fullName>Borrower cash injection to be utilized prior to any loan proceeds</fullName>
                </value>
                <value>
                    <fullName>Borrower to establish membership</fullName>
                </value>
                <value>
                    <fullName>Borrower to register with Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Collection(s) Paid and Explanation Provided</fullName>
                </value>
                <value>
                    <fullName>Complete Inventory listing with values</fullName>
                </value>
                <value>
                    <fullName>Construction budget to be reviewed by Commercial Construction Portfolio Analyst</fullName>
                </value>
                <value>
                    <fullName>Construction budget to be reviewed by qualified 3rd party</fullName>
                </value>
                <value>
                    <fullName>Copies of Leases / Rent Roll</fullName>
                </value>
                <value>
                    <fullName>Excess funds to be deposited into ICCU savings and a hold placed on funds.</fullName>
                </value>
                <value>
                    <fullName>Executed Construction Contract</fullName>
                </value>
                <value>
                    <fullName>Executed Purchase &amp; Sale Agreement</fullName>
                </value>
                <value>
                    <fullName>Final valuation to be completed by the appraiser</fullName>
                </value>
                <value>
                    <fullName>ICCU to control disbursement of funds</fullName>
                </value>
                <value>
                    <fullName>ICCU to monitor payoff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Status__c</fullName>
        <label>Condition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>No Longer Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Type__c</fullName>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Closing</fullName>
                </value>
                <value>
                    <fullName>Prior to Closing</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                </value>
                <value>
                    <fullName>Pre-Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Condition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>